# Object-oriented-analysis-and-design-2

./: .gitignore
lab01/: ClassDiag.drawio  README.md
lab01/EventPlanner/: Event Planner.csproj
lab01/EventPlanner/Forms/: EditEventForm.cs  InputDialog.cs  MainForm.cs  TemplateEditorForm.cs
lab01/EventPlanner/Models/: Address.cs  EventTemplate.cs
lab01/EventPlanner/Properties/: AssemblyInfo.cs
lab01/EventPlanner/Services/: ITemplateRepository.cs  PrototypeTemplateRepository.cs  TemplateRepository.cs
lab01/EventPlannerNoPattern/: Event Planner.csproj  Program.cs  WindowsFormsApp1.sln
lab01/EventPlannerNoPattern/Models/: Organizer.cs
lab01/EventPlannerNoPattern/Services/: TemplateRepository.cs
lab02/: README.md
lab02/no_pattern/: CMakeLists.txt  main.cpp
lab02/pattern/: main.cpp
lab03/: README.md  calc_no_pattern.py  calc_w_pattern.py
